Basic docs template

--- a/src/components/HomepageFeatures/styles.module.css
+++ b/src/components/HomepageFeatures/styles.module.css
@@ -9,3 +9,8 @@
   height: 200px;
   width: 200px;
 }
+
+.titleLink, .titleLink:hover, .titleLink:active {
+  color: var(--ifm-color-primary-darkest);
+  text-decoration-color: var(--ifm-color-primary-darkest);
+}
