--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -6,25 +6,41 @@
 
 /* You can override the default Infima variables here. */
 :root {
-  --ifm-color-primary: #2e8555;
-  --ifm-color-primary-dark: #29784c;
-  --ifm-color-primary-darker: #277148;
-  --ifm-color-primary-darkest: #205d3b;
-  --ifm-color-primary-light: #33925d;
-  --ifm-color-primary-lighter: #359962;
-  --ifm-color-primary-lightest: #3cad6e;
+  --ifm-color-primary: #FF4D00;
+  --ifm-color-primary-dark: #FF4D00;
+  --ifm-color-primary-darker: #e64500;
+  --ifm-color-primary-darkest: #000000;
+  --ifm-color-primary-light: #666666;
+  --ifm-color-primary-lighter: #F2EFED;
+  --ifm-color-primary-lightest: #F2EFED;
   --ifm-code-font-size: 95%;
-  --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.1);
+  --docusaurus-highlighted-code-line-bg: rgba(255, 77, 0, 0.16);
 }
 
 /* For readability concerns, you should choose a lighter palette in dark mode. */
 [data-theme='dark'] {
-  --ifm-color-primary: #25c2a0;
-  --ifm-color-primary-dark: #21af90;
-  --ifm-color-primary-darker: #1fa588;
-  --ifm-color-primary-darkest: #1a8870;
-  --ifm-color-primary-light: #29d5b0;
-  --ifm-color-primary-lighter: #32d8b4;
-  --ifm-color-primary-lightest: #4fddbf;
-  --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.3);
+  --ifm-color-primary: #e64500;
+  --ifm-color-primary-dark: #e64500;
+  --ifm-color-primary-darker: #FF4D00;
+  --ifm-color-primary-darkest: #FF4D00;
+  --ifm-color-primary-light: #F2EFED;
+  --ifm-color-primary-lighter: #F2EFED;
+  --ifm-color-primary-lightest: #fff;
+  --docusaurus-highlighted-code-line-bg: rgba(255,255,255,.4);
+}
+
+@font-face {
+  font-family: Inter;
+  src: url('/font/inter/Inter-VariableFont_slnt,wght.ttf');
+}
+
+html, body {
+  background: #F2EFED;
+  font-family: Inter;
+  overflow-x: hidden;
+  font-size: 16px;
+}
+
+.menu__list-item-collapsible {
+  text-transform: capitalize;
 }
